--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,24 +1,34 @@
-@import 'abstracts/variables';
+@import 'abstracts/functions';
 @import 'abstracts/mixins';
+@import 'abstracts/placeholders';
+@import 'abstracts/variables';
 
-@import 'vendors/bootstrap';
-
+@import 'base/animations';
+@import 'base/base';
 @import 'base/reset';
 @import 'base/typography';
-
-@import 'layout/navigation';
-@import 'layout/grid';
-@import 'layout/header';
-@import 'layout/footer';
-@import 'layout/sidebar';
-@import 'layout/forms';
 
 @import 'components/buttons';
 @import 'components/cover';
 @import 'components/dropdown';
+@import 'components/media';
+@import 'components/thumbnails';
+
+@import 'layout/footer';
+@import 'layout/forms';
+@import 'layout/grid';
+@import 'layout/header';
+@import 'layout/home';
+@import 'layout/navigation';
+@import 'layout/sidebar';
 
 @import 'pages/home';
-@import 'pages/contact';
+@import 'pages/join';
+@import 'pages/login';
 
 @import 'themes/theme';
 @import 'themes/admin';
+
+@import 'vendors/bootstrap';
+@import 'vendors/jquery-ui';
+@import 'vendors/select2';
