--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,19 +1,23 @@
+// abstracts
 @import 'abstracts/functions';
 @import 'abstracts/mixins';
 @import 'abstracts/placeholders';
 @import 'abstracts/variables';
 
+// base
 @import 'base/animations';
 @import 'base/base';
 @import 'base/reset';
 @import 'base/typography';
 
+// components
 @import 'components/buttons';
 @import 'components/cover';
 @import 'components/dropdown';
 @import 'components/media';
 @import 'components/thumbnails';
 
+// layout
 @import 'layout/footer';
 @import 'layout/forms';
 @import 'layout/grid';
@@ -22,13 +26,15 @@
 @import 'layout/navigation';
 @import 'layout/sidebar';
 
-@import 'pages/home';
+// pages
 @import 'pages/join';
 @import 'pages/login';
 
-@import 'themes/theme';
+// themes
 @import 'themes/admin';
+@import 'themes/theme';
 
+// vendors
 @import 'vendors/bootstrap';
 @import 'vendors/jquery-ui';
 @import 'vendors/select2';
